# playground

./: .gitignore  CSV_files  Cargo.toml  README.md
extra/rosy_stack/app-backend/: Cargo.toml
extra/rosy_stack/app-frontend/: Cargo.toml  README.md  package-lock.json
extra/rosy_stack/app-frontend/src/components/: mod.rs
extra/rosy_stack/app-shared/src/models/: study_material.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs  rocket.rs
lib/src/rocket/: task.rs
lib/src/rocket_example/: README.md  basic_launch.rs  mod.rs
rocket_playground/: Cargo.toml
rocket_playground/src/: main.rs
rocket_playground/src/routes/: basics.rs  json_responses.rs  mod.rs
rocket_playground/src/routes/HTML_endpoints/: mod.rs  render_file.rs
rocket_playground/src/templates/: base.html  index.html.tera
rocket_playground/src/utils/: hello.rs
rosy_stack/: README.md
rosy_stack/app-backend/: README.md
rosy_stack/app-backend/src/: main.rs
rosy_stack/app-frontend/: index.html  tailwind.config.js
rosy_stack/app-frontend/src/: app.rs
rosy_stack/app-frontend/src/components/pages/: home.rs
rosy_stack/app-frontend/styles/: design.html  index.css
rosy_stack/app-shared/src/models/: mod.rs
src/: README.md  examples.rs  main.rs
src/examples/: datetime.rs  io.rs  reading.rs  saving.rs  strings.rs  structs.rs  writing.rs
src/examples/csv/: README.md  mod.rs  reading.rs  struct_to_csv.rs  writing.rs
src/examples/error_handling/: methods.rs  mod.rs  provisional.rs  question_mark.rs  switch.rs
src/examples/hash_maps/: accessing.rs  creating.rs  inserting.rs  mod.rs  modifying.rs  removing.rs
src/examples/json/: README.md  access_json.rs  create_json.rs  example_from_serde.rs  indeterminate_json.rs  json_to_struct.rs  lots_of_pets.json  mod.rs  struct_to_json.rs
src/examples/reqwests/: Method_vs_Browser.md  README.md  get.rs
