[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"

serde = { version = "1.0.160", features = ["derive"] }# Serialized-DeSerialize JSON as Struct. Don't forget the derive feature!
serde_derive = "1.0.160" # This is something different

serde_json = "1.0.96"

chrono = "0.4.24"
reqwest = {version = "0.11.16", features = ["blocking"]}
tokio = { version = "1.28.0", features = ["full"] }



lib = {path = "./lib"} # Note that the left-hand name needs to match the foldername on the right

# Can also be written in the following manner, to break out from normal dependencies:
# [depdendencies.lib]
# path = "./lib"