[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"

serde = { version = "1.0.160", features = ["derive"] }# Serialized-DeSerialize JSON as Struct. Don't forget the derive feature!

serde_json = "1.0.96"

chrono = "0.4.24"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }

tokio = { version = "1.28.0", features = ["full"] }
rocket = { version = "0.5.0-rc.3", features = ["json"]}


# Import our lib folder (note that the lib folder is its own crate, therefore has its own Cargo.toml for internal specs)
lib = {path = "./lib"} # Note that the left-hand name needs to match the foldername on the right

# Can also be written in the following manner, to break out from normal dependencies:
# [depdendencies.lib]
# path = "./lib"