[package]
name = "app-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }